[metadata]
name = adb_shell
author = Jeff Irion
author_email = jefflirion@users.noreply.github.com
description = A Python implementation of ADB with shell and FileSync functionality.
license = Apache-2.0
keywords = adb, android
url = https://github.com/JeffLIrion/adb_shell 
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2

[options]
install_requires = cryptography; pyasn1; rsa
packages = adb_shell, adb_shell.auth, adb_shell.transport

[options.extras_require]
usb = libusb1>=1.0.16
async = aiofiles>=0.4.0
testing = pycryptodome; libusb1>=1.0.16

[tool.setuptools]

[distutils.bdist_wheel]
universal = 1
